# avro-schema-manager

./: .gitignore  Cargo.toml  README.md  build.rs
src/: error.rs  graphql.rs  lib.rs  main.rs  settings.json  settings.rs
storage/: Cargo.toml
storage/src/: error.rs  lib.rs  sqlite.rs
ui/: .eslintrc.js  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  webpack.config.js
ui/src/: index.tsx
ui/src/app/: app.scss  index.tsx
ui/src/app/appbar/: appbar.scss  appbar.scss.d.ts  index.tsx
ui/src/app/schema/: index.tsx  schema.scss
ui/src/app/schema/fields/: index.tsx
ui/src/app/schema/graph/: index.tsx
ui/src/app/schema/list/: index.tsx  schemaList.scss  schemaList.scss.d.ts
ui/styles/: _mixins.scss  _variables.scss  main.scss
ui/types/: scss.d.ts
